crates/batuta-tui/tests/snapshots/render__ut_732_error_dark_120x40.snap
---
source: crates/batuta-tui/tests/render.rs
expression: output
---
batuta · batuta-cli · sess-807cee9774b33f68 · batuta · "Analisar e implementar projeto conforme documentação …" · active
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
beginning of transcript
▸ batuta
  The deployment could not be completed. Retry after checking the token.
  × failed deploy
































────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
j/k move  Enter expand  t reasoning  D raw debug  G newest  g oldest  q quit                                        live
