crates/batuta-tui/tests/snapshots/render__ut_732_short_dark_90x30.snap
---
source: crates/batuta-tui/tests/render.rs
expression: output
---
batuta · batuta-cli · sess-807cee9774b33f68 · batuta · "Analisar e implementar …" · active
──────────────────────────────────────────────────────────────────────────────────────────
beginning of transcript
▸ user
  Need a release checklist

▸ batuta
  I will verify the release checklist.




















──────────────────────────────────────────────────────────────────────────────────────────
j/k move  Enter expand  t reasoning  D raw debug  G newest  g oldest  q quit          live
